# markov

./: AUTHORS  Makefile.am  README  configure.ac  doxygen.cfg  doxygen.cfg.in
examples/: diet.txt  hamlet.txt
include/: Makefile.am  chain.hh
src/: Makefile.am  chain.cc
