#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([markov], [master], [jason@sigio.com])
AC_CONFIG_SRCDIR([src/chain.cc])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
LT_PREREQ([2.2])
LT_INIT([dlopen])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

# check for doxygen in the path
AC_CHECK_PROG([DOXYGEN],[doxygen],[doxygen])
AM_CONDITIONAL([HAVE_DOXYGEN],[test x$DOXYGEN != x])

# Check for files
AX_RANDOM_DEVICE

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T


# Substitutions for doxygen configuration.
AC_SUBST([doxyfile_encoding],[UTF-8])
AC_SUBST([doxygen_project_number])
AC_SUBST([doxygen_project_brief],['"A Markov chain implementation in C++."'])
AC_SUBST([doxygen_project_logo])
AC_SUBST([doxygen_output_directory],[doc])
AC_SUBST([doxygen_create_subdirs],[NO])
AC_SUBST([doxygen_output_language],[English])
AC_SUBST([doxygen_brief_member_desc],[YES])
AC_SUBST([doxygen_repeat_brief],[YES])
AC_SUBST([doxygen_abbreviate_brief])
AC_SUBST([doxygen_always_detailed_sec],[NO])
AC_SUBST([doxygen_inline_inherited_memb],[NO])
AC_SUBST([doxygen_full_path_names],[YES])
AC_SUBST([doxygen_strip_from_path])
AC_SUBST([doxygen_strip_from_inc_path])
AC_SUBST([doxygen_short_names],[NO])
AC_SUBST([doxygen_javadoc_autobrief],[NO])
AC_SUBST([doxygen_qt_autobrief],[NO])
AC_SUBST([doxygen_multiline_cpp_is_brief],[NO])
AC_SUBST([doxygen_inherit_docs],[YES])
AC_SUBST([doxygen_separate_member_pages],[NO])
AC_SUBST([doxygen_tab_size],[2])
AC_SUBST([doxygen_aliases])
AC_SUBST([doxygen_optimize_output_for_c],[NO])
AC_SUBST([doxygen_optimize_output_java],[NO])
AC_SUBST([doxygen_optimize_for_fortran],[NO])
AC_SUBST([doxygen_optimize_output_vhdl],[NO])
AC_SUBST([doxygen_extension_mapping])
AC_SUBST([doxygen_builtin_stl_support],[YES])
AC_SUBST([doxygen_cpp_cli_support],[NO])
AC_SUBST([doxygen_sip_support],[NO])
AC_SUBST([doxygen_idl_property_support],[YES])
AC_SUBST([doxygen_distribute_group_doc],[NO])
AC_SUBST([doxygen_subgrouping],[YES])
AC_SUBST([doxygen_inline_grouped_classes],[NO])
AC_SUBST([doxygen_typedef_hides_struct],[NO])
AC_SUBST([doxygen_symbol_cache_size],[0])
AC_SUBST([doxygen_extract_all],[NO])
AC_SUBST([doxygen_extract_private],[NO])
AC_SUBST([doxygen_extract_static],[NO])
AC_SUBST([doxygen_extract_local_classes],[YES])
AC_SUBST([doxygen_extract_local_methods],[NO])
AC_SUBST([doxygen_extract_anon_nspaces],[NO])
AC_SUBST([doxygen_hide_undoc_members],[NO])
AC_SUBST([doxygen_hide_undoc_classes],[NO])
AC_SUBST([doxygen_hide_friend_compounds],[NO])
AC_SUBST([doxygen_hide_in_body_docs],[NO])
AC_SUBST([doxygen_internal_docs],[NO])
AC_SUBST([doxygen_case_sense_names],[YES])
AC_SUBST([doxygen_hide_scope_names],[NO])
AC_SUBST([doxygen_show_include_files],[YES])
AC_SUBST([doxygen_force_local_includes],[NO])
AC_SUBST([doxygen_inline_info],[YES])
AC_SUBST([doxygen_sort_member_docs],[YES])
AC_SUBST([doxygen_sort_brief_docs],[NO])
AC_SUBST([doxygen_sort_members_ctors_1st],[NO])
AC_SUBST([doxygen_sort_group_names],[NO])
AC_SUBST([doxygen_sort_by_scope_name],[NO])
AC_SUBST([doxygen_strict_proto_matching],[NO])
AC_SUBST([doxygen_generate_todolist],[YES])
AC_SUBST([doxygen_generate_testlist],[YES])
AC_SUBST([doxygen_generate_buglist],[YES])
AC_SUBST([doxygen_generate_deprecatedlist],[YES])
AC_SUBST([doxygen_enabled_sections])
AC_SUBST([doxygen_max_initializer_lines],[30])
AC_SUBST([doxygen_show_used_files],[YES])
AC_SUBST([doxygen_show_directories],[NO])
AC_SUBST([doxygen_show_files],[YES])
AC_SUBST([doxygen_show_namespaces],[YES])
AC_SUBST([doxygen_file_version_filter])
AC_SUBST([doxygen_layout_file])
AC_SUBST([doxygen_quiet],[NO])
AC_SUBST([doxygen_warnings],[YES])
AC_SUBST([doxygen_warn_if_undocumented],[YES])
AC_SUBST([doxygen_warn_if_doc_error],[YES])
AC_SUBST([doxygen_warn_no_paramdoc],[NO])
AC_SUBST([doxygen_warn_format],['"$file:$line: $text"'])
AC_SUBST([doxygen_warn_logfile])
AC_SUBST([doxygen_input],[include])
AC_SUBST([doxygen_input_encoding],[UTF-8])
AC_SUBST([doxygen_file_patterns])
AC_SUBST([doxygen_recursive],[NO])
AC_SUBST([doxygen_exclude])
AC_SUBST([doxygen_exclude_symlinks],[NO])
AC_SUBST([doxygen_exclude_patterns])
AC_SUBST([doxygen_exclude_symbols])
AC_SUBST([doxygen_example_path],[examples])
AC_SUBST([doxygen_example_patterns])
AC_SUBST([doxygen_example_recursive],[NO])
AC_SUBST([doxygen_image_path])
AC_SUBST([doxygen_input_filter])
AC_SUBST([doxygen_filter_patterns])
AC_SUBST([doxygen_filter_source_files],[NO])
AC_SUBST([doxygen_filter_source_patterns])
AC_SUBST([doxygen_source_browser],[NO])
AC_SUBST([doxygen_inline_sources],[NO])
AC_SUBST([doxygen_strip_code_comments],[YES])
AC_SUBST([doxygen_referenced_by_relation],[NO])
AC_SUBST([doxygen_references_relation],[NO])
AC_SUBST([doxygen_references_link_source],[YES])
AC_SUBST([doxygen_use_htags],[NO])
AC_SUBST([doxygen_verbatim_headers],[YES])
AC_SUBST([doxygen_alphabetical_index],[YES])
AC_SUBST([doxygen_cols_in_alpha_index],[5])
AC_SUBST([doxygen_ignore_prefix])
AC_SUBST([doxygen_generate_html],[YES])
AC_SUBST([doxygen_html_output],[html])
AC_SUBST([doxygen_html_file_extension],[.html])
AC_SUBST([doxygen_html_header])
AC_SUBST([doxygen_html_footer])
AC_SUBST([doxygen_html_stylesheet])
AC_SUBST([doxygen_html_extra_files])
AC_SUBST([doxygen_html_colorstyle_hue],[220])
AC_SUBST([doxygen_html_colorstyle_sat],[100])
AC_SUBST([doxygen_html_colorstyle_gamma],[80])
AC_SUBST([doxygen_html_timestamp],[YES])
AC_SUBST([doxygen_html_align_members],[YES])
AC_SUBST([doxygen_html_dynamic_sections],[NO])
AC_SUBST([doxygen_generate_docset],[NO])
AC_SUBST([doxygen_docset_feedname],['"Doxygen generated docs"'])
AC_SUBST([doxygen_docset_bundle_id],[org.doxygen.Project])
AC_SUBST([doxygen_docset_publisher_id],[org.doxygen.Publisher])
AC_SUBST([doxygen_docset_publisher_name],[Publisher])
AC_SUBST([doxygen_generate_htmlhelp],[NO])
AC_SUBST([doxygen_chm_file])
AC_SUBST([doxygen_hhc_location])
AC_SUBST([doxygen_generate_chi],[NO])
AC_SUBST([doxygen_chm_index_encoding])
AC_SUBST([doxygen_binary_toc],[NO])
AC_SUBST([doxygen_toc_expand],[NO])
AC_SUBST([doxygen_generate_qhp],[NO])
AC_SUBST([doxygen_qch_file])
AC_SUBST([doxygen_qhp_namespace],[org.doxygen.Project])
AC_SUBST([doxygen_qhp_virtual_folder],[doc])
AC_SUBST([doxygen_qhp_cust_filter_name])
AC_SUBST([doxygen_qhp_cust_filter_attrs])
AC_SUBST([doxygen_qhp_sect_filter_attrs])
AC_SUBST([doxygen_qhg_location])
AC_SUBST([doxygen_generate_eclipsehelp],[NO])
AC_SUBST([doxygen_eclipse_doc_id],[org.doxygen.Project])
AC_SUBST([doxygen_disable_index],[NO])
AC_SUBST([doxygen_enum_values_per_line],[4])
AC_SUBST([doxygen_generate_treeview],[NO])
AC_SUBST([doxygen_use_inline_trees],[NO])
AC_SUBST([doxygen_treeview_width],[250])
AC_SUBST([doxygen_ext_links_in_window],[NO])
AC_SUBST([doxygen_formula_fontsize],[10])
AC_SUBST([doxygen_formula_transparent],[YES])
AC_SUBST([doxygen_use_mathjax],[NO])
AC_SUBST([doxygen_mathjax_relpath],[http://www.mathjax.org/mathjax])
AC_SUBST([doxygen_searchengine],[YES])
AC_SUBST([doxygen_server_based_search],[NO])
AC_SUBST([doxygen_generate_latex],[NO])
AC_SUBST([doxygen_latex_output],[latex])
AC_SUBST([doxygen_latex_cmd_name],[latex])
AC_SUBST([doxygen_makeindex_cmd_name],[makeindex])
AC_SUBST([doxygen_compact_latex],[NO])
AC_SUBST([doxygen_paper_type],[a4])
AC_SUBST([doxygen_extra_packages])
AC_SUBST([doxygen_latex_header])
AC_SUBST([doxygen_latex_footer])
AC_SUBST([doxygen_pdf_hyperlinks],[YES])
AC_SUBST([doxygen_use_pdflatex],[YES])
AC_SUBST([doxygen_latex_batchmode],[NO])
AC_SUBST([doxygen_latex_hide_indices],[NO])
AC_SUBST([doxygen_latex_source_code],[NO])
AC_SUBST([doxygen_generate_rtf],[NO])
AC_SUBST([doxygen_rtf_output],[rtf])
AC_SUBST([doxygen_compact_rtf],[NO])
AC_SUBST([doxygen_rtf_hyperlinks],[NO])
AC_SUBST([doxygen_rtf_stylesheet_file])
AC_SUBST([doxygen_rtf_extensions_file])
AC_SUBST([doxygen_generate_man],[NO])
AC_SUBST([doxygen_man_output],[man])
AC_SUBST([doxygen_man_extension],[.3])
AC_SUBST([doxygen_man_links],[NO])
AC_SUBST([doxygen_generate_xml],[NO])
AC_SUBST([doxygen_xml_output],[xml])
AC_SUBST([doxygen_xml_schema])
AC_SUBST([doxygen_xml_dtd])
AC_SUBST([doxygen_xml_programlisting],[YES])
AC_SUBST([doxygen_generate_autogen_def],[NO])
AC_SUBST([doxygen_generate_perlmod],[NO])
AC_SUBST([doxygen_perlmod_latex],[NO])
AC_SUBST([doxygen_perlmod_pretty],[YES])
AC_SUBST([doxygen_perlmod_makevar_prefix])
AC_SUBST([doxygen_enable_preprocessing],[YES])
AC_SUBST([doxygen_macro_expansion],[NO])
AC_SUBST([doxygen_expand_only_predef],[NO])
AC_SUBST([doxygen_search_includes],[YES])
AC_SUBST([doxygen_include_path])
AC_SUBST([doxygen_include_file_patterns])
AC_SUBST([doxygen_predefined])
AC_SUBST([doxygen_expand_as_defined])
AC_SUBST([doxygen_skip_function_macros],[YES])
AC_SUBST([doxygen_tagfiles])
AC_SUBST([doxygen_generate_tagfile])
AC_SUBST([doxygen_allexternals],[NO])
AC_SUBST([doxygen_external_groups],[YES])
AC_SUBST([doxygen_perl_path],[/usr/bin/perl])
AC_SUBST([doxygen_class_diagrams],[YES])
AC_SUBST([doxygen_mscgen_path])
AC_SUBST([doxygen_hide_undoc_relations],[YES])
AC_SUBST([doxygen_have_dot],[NO])
AC_SUBST([doxygen_dot_num_threads],[0])
AC_SUBST([doxygen_dot_fontname],[Helvetica])
AC_SUBST([doxygen_dot_fontsize],[10])
AC_SUBST([doxygen_dot_fontpath])
AC_SUBST([doxygen_class_graph],[YES])
AC_SUBST([doxygen_collaboration_graph],[YES])
AC_SUBST([doxygen_group_graphs],[YES])
AC_SUBST([doxygen_uml_look],[NO])
AC_SUBST([doxygen_template_relations],[NO])
AC_SUBST([doxygen_include_graph],[YES])
AC_SUBST([doxygen_included_by_graph],[YES])
AC_SUBST([doxygen_call_graph],[NO])
AC_SUBST([doxygen_caller_graph],[NO])
AC_SUBST([doxygen_graphical_hierarchy],[YES])
AC_SUBST([doxygen_directory_graph],[YES])
AC_SUBST([doxygen_dot_image_format],[png])
AC_SUBST([doxygen_dot_path])
AC_SUBST([doxygen_dotfile_dirs])
AC_SUBST([doxygen_mscfile_dirs])
AC_SUBST([doxygen_dot_graph_max_nodes],[50])
AC_SUBST([doxygen_max_dot_graph_depth],[0])
AC_SUBST([doxygen_dot_transparent],[NO])
AC_SUBST([doxygen_dot_multi_targets],[YES])
AC_SUBST([doxygen_generate_legend],[YES])
AC_SUBST([doxygen_dot_cleanup],[YES])

# Generate output
AC_CONFIG_FILES([Makefile doxygen.cfg src/Makefile include/Makefile])
AC_OUTPUT
